upper section added

--- a/index.html
+++ b/index.html
@@ -9,23 +9,47 @@
 </head>
 <body>
    <section class="top-banner">
-    <div class="container">
+    <div class="container ">
       <nav class="navbar navbar-expand-lg navbar-light ">
-        <a class="navbar-brand" href="#">
-          <img src="ICON/Logo.png" alt="">
-        </a>
-        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
-          <span class="navbar-toggler-icon"></span>
-        </button>
-        <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
-          <div class="navbar-nav">
-            <a class="nav-item nav-link active" href="#">Home <span class="sr-only">(current)</span></a>
-            <a class="nav-item nav-link" href="#">Features</a>
-            <a class="nav-item nav-link" href="#">Pricing</a>
-            <a class="nav-item nav-link disabled" href="#" tabindex="-1" aria-disabled="true">Disabled</a>
+        <div class="col-md-6 up-section">
+          <a class="navbar-brand" href="#">
+            <img class="logo" src="ICON/Logo.png" alt="">
+          </a>
+        </div>
+        <div class="col-md-6 up-section">
+          <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
+            <span class="navbar-toggler-icon"></span>
+          </button>
+          <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
+            <div class="navbar-nav">
+              <a class="nav-item nav-link" id="books" href="#books">Books</a>
+              <a class="nav-item nav-link" id="courses" href="#courses">Courses</a>
+              <a class="nav-item nav-link" id="others" href="#others">Others</a>
+              <a class="nav-item nav-link" id="blog" href="#blog">Blog</a>
+              
+              <form class="form-inline">
+                <button type="button" class="btn btn-success sign-in">Sign in</button>
+              </form>
+            </div>
           </div>
         </div>
       </nav>
+    </div>
+
+    <!-- headlines -->
+    <div class="container form-inline">
+      <div class="col-md-5">
+        <h5 class="head-5">Are you ready to learn?</h5>
+        <h1 class="head-1">Learn With fun on <span class="font-grren">any schedule</span> </h1>
+        <p class="para-1">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Doloribus omnis nam porro beatae obcaecati aspernatur.
+        </p>
+        <button type="button" class="btn btn-success strat-button">Get Started</button>
+      </div>
+
+      <div class="col-md-7">
+        <img class="illu-pic " src="photos/Illustration.png" alt="">
+      </div>
+
     </div>
 
 
