categories section added

--- a/index.html
+++ b/index.html
@@ -51,10 +51,49 @@
       </div>
 
     </div>
-
-
-
-
+   </section>
+   
+   <!-- categories card -->
+   <section class="container ">
+    <div class="card-deck ">
+      <div class="col-md-3">
+        <div class="card d-flex align-items-center">
+          <img src="ICON/book.png" class="card-img-top" alt="...">
+          <div class="card-body">
+            <h5 class="card-title">1500+ Topic</h5>
+            <p class="card-text">Learn Anythings</p>
+            
+          </div>
+        </div>
+      </div>
+      <div class="col-md-3">
+        <div class="card d-flex align-items-center">
+          <img src="ICON/Student.png" class="card-img-top" alt="...">
+          <div class="card-body">
+            <h5 class="card-title">1500+ Topic</h5>
+            <p class="card-text">Learn Anythings</p>
+          </div>
+        </div>
+      </div>
+      <div class="col-md-3">
+        <div class="card d-flex align-items-center">
+          <img src="ICON/Test.png" class="card-img-top" alt="...">
+          <div class="card-body">
+            <h5 class="card-title">1500+ Topic</h5>
+            <p class="card-text">Learn Anythings</p>
+          </div>
+        </div>
+      </div>
+      <div class="col-md-3">
+        <div class="card d-flex align-items-center ">
+          <img src="ICON/Students.png" class="card-img-top" alt="...">
+          <div class="card-body">
+            <h5 class="card-title">1500+ Topic</h5>
+            <p class="card-text">Learn Anythings</p>
+          </div>
+        </div>
+      </div>
+    </div>
 
    </section>
 
