--- a/index.html
+++ b/index.html
@@ -55,9 +55,9 @@
    
    <!-- categories card -->
    <section class="container ">
-    <div class="card-deck ">
+    <div class="card-deck cat-deck ">
       <div class="col-md-3">
-        <div class="card d-flex align-items-center">
+        <div class="card cat d-flex align-items-center">
           <img src="ICON/book.png" class="card-img-top" alt="...">
           <div class="card-body">
             <h5 class="card-title">1500+ Topic</h5>
@@ -67,7 +67,7 @@
         </div>
       </div>
       <div class="col-md-3">
-        <div class="card d-flex align-items-center">
+        <div class="card cat d-flex align-items-center">
           <img src="ICON/Student.png" class="card-img-top" alt="...">
           <div class="card-body">
             <h5 class="card-title">1500+ Topic</h5>
@@ -76,7 +76,7 @@
         </div>
       </div>
       <div class="col-md-3">
-        <div class="card d-flex align-items-center">
+        <div class="card cat d-flex align-items-center">
           <img src="ICON/Test.png" class="card-img-top" alt="...">
           <div class="card-body">
             <h5 class="card-title">1500+ Topic</h5>
@@ -85,7 +85,7 @@
         </div>
       </div>
       <div class="col-md-3">
-        <div class="card d-flex align-items-center ">
+        <div class="card cat d-flex align-items-center ">
           <img src="ICON/Students.png" class="card-img-top" alt="...">
           <div class="card-body">
             <h5 class="card-title">1500+ Topic</h5>
@@ -98,6 +98,42 @@
    </section>
 
 
+
+   
+   <!-- Courses -->
+   <section class="container">
+     <div class="card-deck">
+  <div class="card">
+    <img src="..." class="card-img-top" alt="...">
+    <div class="card-body">
+      <h5 class="card-title">Card title</h5>
+      <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
+    </div>
+    <div class="card-footer">
+      <small class="text-muted">Last updated 3 mins ago</small>
+    </div>
+  </div>
+  <div class="card">
+    <img src="..." class="card-img-top" alt="...">
+    <div class="card-body">
+      <h5 class="card-title">Card title</h5>
+      <p class="card-text">This card has supporting text below as a natural lead-in to additional content.</p>
+    </div>
+    <div class="card-footer">
+      <small class="text-muted">Last updated 3 mins ago</small>
+    </div>
+  </div>
+  <div class="card">
+    <img src="..." class="card-img-top" alt="...">
+    <div class="card-body">
+      <h5 class="card-title">Card title</h5>
+      <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This card has even longer content than the first to show that equal height action.</p>
+    </div>
+    <div class="card-footer">
+      <small class="text-muted">Last updated 3 mins ago</small>
+    </div>
+  </div>
+   </section>
 
 
 
