--- a/index.html
+++ b/index.html
@@ -1,14 +1,17 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>e-school</title>
-  <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css" integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk" crossorigin="anonymous">
+  <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css"
+    integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk" crossorigin="anonymous">
   <link rel="stylesheet" href="style.css">
 </head>
+
 <body>
-   <section class="top-banner">
+  <section class="top-banner">
     <div class="container ">
       <nav class="navbar navbar-expand-lg navbar-light ">
         <div class="col-md-6 up-section">
@@ -17,7 +20,8 @@
           </a>
         </div>
         <div class="col-md-6 up-section">
-          <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
+          <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup"
+            aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
           </button>
           <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
@@ -26,7 +30,7 @@
               <a class="nav-item nav-link" id="courses" href="#courses">Courses</a>
               <a class="nav-item nav-link" id="others" href="#others">Others</a>
               <a class="nav-item nav-link" id="blog" href="#blog">Blog</a>
-              
+
               <form class="form-inline">
                 <button type="button" class="btn btn-success sign-in">Sign in</button>
               </form>
@@ -41,7 +45,8 @@
       <div class="col-md-5">
         <h5 class="head-5">Are you ready to learn?</h5>
         <h1 class="head-1">Learn With fun on <span class="font-grren">any schedule</span> </h1>
-        <p class="para-1">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Doloribus omnis nam porro beatae obcaecati aspernatur.
+        <p class="para-1">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Doloribus omnis nam porro beatae
+          obcaecati aspernatur.
         </p>
         <button type="button" class="btn btn-success strat-button">Get Started</button>
       </div>
@@ -51,10 +56,10 @@
       </div>
 
     </div>
-   </section>
-   
-   <!-- categories card -->
-   <section class="container ">
+  </section>
+
+  <!-- categories card -->
+  <section class="container ">
     <div class="card-deck cat-deck ">
       <div class="col-md-3">
         <div class="card cat d-flex align-items-center">
@@ -62,7 +67,7 @@
           <div class="card-body">
             <h5 class="card-title">1500+ Topic</h5>
             <p class="card-text">Learn Anythings</p>
-            
+
           </div>
         </div>
       </div>
@@ -95,45 +100,69 @@
       </div>
     </div>
 
-   </section>
+  </section>
 
 
 
-   
-   <!-- Courses -->
-   <section class="container">
-     <div class="card-deck">
-  <div class="card">
-    <img src="..." class="card-img-top" alt="...">
-    <div class="card-body">
-      <h5 class="card-title">Card title</h5>
-      <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
+
+  <!-- Courses -->
+  <section class="container">
+    <div class="card-deck course-deck">
+      <div class="card course">
+        <img class="course-pic" src="Photos/Morder pyschology.png" alt="...">
+        <div class="card-body ">
+          <h3 class="card-title">Mordern Psychology</h3>
+          <p class="card-text">Designation</p>
+          <button type="button" class="btn btn-success strat-button">Buy Course</button>
+        </div>
+        <div class="form-inline">
+
+          <img class="cal" src="ICON/calendar.png" alt="">
+          <p>Start 20 April,2021</p>
+
+          <div class="d flex justify-content-end">
+            <img class="cal" src="ICON/people.png" alt="">
+            <p>^60 seats</p>
+          </div>
+        </div>
+      </div>
+
+      <div class="card course">
+        <img class="course-pic" src="Photos/Morder pyschology.png" class="card-img-top" alt="...">
+        <div class="card-body ">
+          <h5 class="card-title">Mordern Psychology</h5>
+          <p class="card-text">Designation</p>
+          <button type="button" class="btn btn-success strat-button">Buy Course</button>
+        </div>
+        <div class="form-inline">
+
+          <img class="cal" src="ICON/calendar.png" alt="">
+          <p>Start 20 April,2021</p>
+
+          <img class="cal" src="ICON/people.png" alt="">
+          <p>^60 seats</p>
+        </div>
+      </div>
+
+
+      <div class="card course">
+        <img class="course-pic" src="Photos/Morder pyschology.png" class="card-img-top" alt="...">
+        <div class="card-body ">
+          <h5 class="card-title">Mordern Psychology</h5>
+          <p class="card-text">Designation</p>
+          <button type="button" class="btn btn-success strat-button">Buy Course</button>
+        </div>
+        <div class="form-inline">
+
+          <img class="cal" src="ICON/calendar.png" alt="">
+          <p>Start 20 April,2021</p>
+
+          <img class="cal" src="ICON/people.png" alt="">
+          <p>^60 seats</p>
+        </div>
+      </div>
     </div>
-    <div class="card-footer">
-      <small class="text-muted">Last updated 3 mins ago</small>
-    </div>
-  </div>
-  <div class="card">
-    <img src="..." class="card-img-top" alt="...">
-    <div class="card-body">
-      <h5 class="card-title">Card title</h5>
-      <p class="card-text">This card has supporting text below as a natural lead-in to additional content.</p>
-    </div>
-    <div class="card-footer">
-      <small class="text-muted">Last updated 3 mins ago</small>
-    </div>
-  </div>
-  <div class="card">
-    <img src="..." class="card-img-top" alt="...">
-    <div class="card-body">
-      <h5 class="card-title">Card title</h5>
-      <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This card has even longer content than the first to show that equal height action.</p>
-    </div>
-    <div class="card-footer">
-      <small class="text-muted">Last updated 3 mins ago</small>
-    </div>
-  </div>
-   </section>
+  </section>
 
 
 
@@ -144,8 +173,15 @@
 
 
 
-  <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
-  <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
-  <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/js/bootstrap.min.js" integrity="sha384-OgVRvuATP1z7JjHLkuOU7Xw704+h835Lr+6QL9UvYjZE3Ipu6Tp75j7Bh/kR0JKI" crossorigin="anonymous"></script>
+  <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"
+    integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous">
+  </script>
+  <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js"
+    integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous">
+  </script>
+  <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/js/bootstrap.min.js"
+    integrity="sha384-OgVRvuATP1z7JjHLkuOU7Xw704+h835Lr+6QL9UvYjZE3Ipu6Tp75j7Bh/kR0JKI" crossorigin="anonymous">
+  </script>
 </body>
+
 </html>
