course section fixed

--- a/index.html
+++ b/index.html
@@ -107,6 +107,7 @@
 
   <!-- Courses -->
   <section class="container">
+    <h1 class="h-1">Online Courses</h1>
     <div class="card-deck course-deck">
       <div class="card course">
         <img class="course-pic" src="Photos/Morder pyschology.png" alt="...">
@@ -117,50 +118,61 @@
         </div>
         <div class="form-inline">
 
-          <img class="cal" src="ICON/calendar.png" alt="">
+          <img class="cal cal-logo" src="ICON/calendar.png" alt="">
           <p>Start 20 April,2021</p>
 
-          <div class="d flex justify-content-end">
-            <img class="cal" src="ICON/people.png" alt="">
-            <p>^60 seats</p>
-          </div>
+          <img class="cal people-logo" src="ICON/people.png" alt="">
+          <p>^60 seats</p>
         </div>
       </div>
 
       <div class="card course">
-        <img class="course-pic" src="Photos/Morder pyschology.png" class="card-img-top" alt="...">
+        <img class="course-pic" src="Photos/Morder pyschology.png" alt="...">
         <div class="card-body ">
-          <h5 class="card-title">Mordern Psychology</h5>
+          <h3 class="card-title">Mordern Psychology</h3>
           <p class="card-text">Designation</p>
           <button type="button" class="btn btn-success strat-button">Buy Course</button>
         </div>
         <div class="form-inline">
 
-          <img class="cal" src="ICON/calendar.png" alt="">
+          <img class="cal cal-logo" src="ICON/calendar.png" alt="">
           <p>Start 20 April,2021</p>
 
-          <img class="cal" src="ICON/people.png" alt="">
+          <img class="cal people-logo" src="ICON/people.png" alt="">
           <p>^60 seats</p>
         </div>
       </div>
 
 
       <div class="card course">
-        <img class="course-pic" src="Photos/Morder pyschology.png" class="card-img-top" alt="...">
+        <img class="course-pic" src="Photos/Morder pyschology.png" alt="...">
         <div class="card-body ">
-          <h5 class="card-title">Mordern Psychology</h5>
+          <h3 class="card-title">Mordern Psychology</h3>
           <p class="card-text">Designation</p>
           <button type="button" class="btn btn-success strat-button">Buy Course</button>
         </div>
         <div class="form-inline">
 
-          <img class="cal" src="ICON/calendar.png" alt="">
+          <img class="cal cal-logo" src="ICON/calendar.png" alt="">
           <p>Start 20 April,2021</p>
 
-          <img class="cal" src="ICON/people.png" alt="">
+          <img class="cal people-logo" src="ICON/people.png" alt="">
           <p>^60 seats</p>
         </div>
       </div>
+    </div>
+  </section>
+
+  <!-- testimonial -->
+  <section class="container testimonial">
+    <h1 class="h-1">Testimonial</h1>
+    <div class="form-inline">
+      <div class="col-md-3"><img class="man-pic" src="photos/Man.png" alt=""></div>
+      <div class="col-md-8">
+        <P>There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in
+          some form, by injected humour, or randomised words which don't look even slightly believable.</P>
+      </div>
+      
     </div>
   </section>
 
