--- a/index.html
+++ b/index.html
@@ -122,12 +122,12 @@
           <p>Start 20 April,2021</p>
 
           <img class="cal people-logo" src="ICON/people.png" alt="">
-          <p>^60 seats</p>
+          <p>60 seats</p>
         </div>
       </div>
 
       <div class="card course">
-        <img class="course-pic" src="Photos/Morder pyschology.png" alt="...">
+        <img class="course-pic" src="Photos/Morder psyc.png" alt="...">
         <div class="card-body ">
           <h3 class="card-title">Mordern Psychology</h3>
           <p class="card-text">Designation</p>
@@ -139,13 +139,13 @@
           <p>Start 20 April,2021</p>
 
           <img class="cal people-logo" src="ICON/people.png" alt="">
-          <p>^60 seats</p>
+          <p>60 seats</p>
         </div>
       </div>
 
 
       <div class="card course">
-        <img class="course-pic" src="Photos/Morder pyschology.png" alt="...">
+        <img class="course-pic" src="Photos/Morder pychons.png" alt="...">
         <div class="card-body ">
           <h3 class="card-title">Mordern Psychology</h3>
           <p class="card-text">Designation</p>
@@ -157,7 +157,7 @@
           <p>Start 20 April,2021</p>
 
           <img class="cal people-logo" src="ICON/people.png" alt="">
-          <p>^60 seats</p>
+          <p>60 seats</p>
         </div>
       </div>
     </div>
@@ -176,9 +176,55 @@
     </div>
   </section>
 
+  <!-- contact part -->
+  <div class="container contact">
+    <h1 class="h-1">Connect with us</h1>
+    <form action="">
+      <div class="form-group">
+        <label for="exampleFormControlInput1">Email address</label>
+        <input type="email" class="form-control" id="exampleFormControlInput1" placeholder="name@example.com">
+      </div>
+      <p>Drop a message</p>
+      <input class="form-control" type="text" placeholder="Readonly input here…" readonly>
+    </form>
+  </div>
+  <!-- bottom part -->
+  <div class="container bottom">
+    <div class="row">
+      <div class="col-md-5">
+        <p class="para-bottom">Millions of people of all ages and from around the world are improving their lives with us </p>
+      </div>
+      <div class="col-md-2">
+        <p class="para-head">Course</p>
+        <p class="para-bottom">Graphic Design</p>
+        <p class="para-bottom">Web design</p>
+        <p class="para-bottom">Business</p>
+        <p class="para-bottom">Marketing</p>
+        <p class="para-bottom">Engineering</p>
+      </div>
+      <div class="col-md-2">
+        <p class="para-head">Tearms</p>
+        <p class="para-bottom">Graphic Design</p>
+        <p class="para-bottom">Web design</p>
+        <p class="para-bottom">Business</p>
+        <p class="para-bottom">Marketing</p>
+        <p class="para-bottom">Engineering</p>
 
-
-
+      </div>
+      <div class="col-md-2">
+        <p class="para-head">Useful Link</p>
+        <p class="para-bottom">Graphic Design</p>
+        <p class="para-bottom">Web design</p>
+        <p class="para-bottom">Business</p>
+        <p class="para-bottom">Marketing</p>
+        <p class="para-bottom">Engineering</p>
+      </div>
+    </div>
+    <footer>
+      <p class="para-fotter">Copyright © 2020 Rokomari.com</p>
+    </footer>
+    
+  </div>
 
 
 
